--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
         </div>
     </div>
 </body>
-<script src="vice-recorder.js"></script>
+<script src="voice-recorder.js"></script>
+
 </html>
